# blog

./: CMakeLists.txt  README.md
creational_patterns/abstract_factory/after/: ButtonPosix.h  ButtonWindows.h  RectanglePosix.h  TextBox.h  TextBoxWindows.cpp  WidgetFactory.h  WidgetFactoryPosix.cpp  WidgetFactoryPosix.h  WidgetFactoryWindows.cpp  WidgetFactoryWindows.h  main.cpp
creational_patterns/abstract_factory/before/: CMakeLists.txt  Rectangle.h  RectanglePosix.cpp  RectangleWindow.h  TextBoxPosix.cpp  TextBoxPosix.h
creational_patterns/builder/before/: Button.h  ButtonPosix.cpp  ButtonWindows.cpp  CMakeLists.txt  RectangleWindow.cpp  TextBoxWindows.h  main.cpp
introduction_to_design_pattern_part_2/: CMakeLists.txt  Defense.h  Freeze.h  Generator.h  TowerDefense.cpp  Unit.h
introduction_to_design_pattern_part_2/TowerDefense_after_clean/TowerDefense/: CMakeLists.txt  DelayTower.h  IDelayTower.h  OffesniveTower.h  TowerDefense.cpp
introduction_to_design_pattern_part_2/TowerDefense_before/TowerDefense/: CMakeLists.txt  Defense.h  Delay.h  Freeze.h  Generator.h  Money.h  Offensive.h  TowerDefense.cpp  Unit.h
introduction_to_design_pattern_part_3/TowerDefense_applied_command_pattern/: CMakeLists.txt
introduction_to_design_pattern_part_3/TowerDefense_applied_command_pattern/TowerDefense/: CMakeLists.txt  DelayCommand.h  ICommand.h  IMoneyGeneratorTower.h  IOffesniveTower.h  IUnit.h  IWitchTower.h  MoneyGeneratorCommand.h  MoneyGeneratorTower.h  OffensiveCommand.h  OffensiveTower.h  TowerDefense.cpp  WitchCommand.h  WitchTower.h
introduction_to_design_pattern_part_3/TowerDefense_optimized/TowerDefense/: CMakeLists.txt  DelayTower.h  IOffesniveTower.h  IUnit.h  MoneyGeneratorTower.h  Offensive.h  OffesniveTower.h  TowerDefense.cpp  TowerDefense.h  Unit.h
open_close_principle/virtual_interface_after/InterProcessCommunication/: CMakeLists.txt  ILogger.h  InterProcessCommunication.cpp  InterProcessCommunication.h  Logger.cpp  Logger.h  main.cpp
open_close_principle/virtual_interface_before/InterProcessCommunication/: CMakeLists.txt  InterProcessCommunication.cpp  InterProcessCommunication.h  Logger.h  main.cpp
